# safe_client_libs

./: .travis.yml  README.md
.github/workflows/: master.yml
ffi_utils/src/: lib.rs
mock_routing/: Cargo.toml
safe_app/: Cargo.toml  build.rs
safe_app/examples/: client_stress_test.rs  gen_invites.rs
safe_app/src/: cipher_opt.rs  client.rs  errors.rs  lib.rs  object_cache.rs  test_utils.rs
safe_app/src/ffi/: access_container.rs  cipher_opt.rs  crypto.rs  immutable_data.rs  ipc.rs  mdata_info.rs  nfs.rs  object_cache.rs
safe_app/src/ffi/mutable_data/: entry_actions.rs  permissions.rs  tests.rs
safe_app/src/ffi/tests/: nfs.rs
safe_app/src/tests/: mutable_data.rs
safe_authenticator/: Cargo.toml  build.rs
safe_authenticator/src/: access_container.rs  app_auth.rs  app_container.rs  apps.rs  client.rs  config.rs  errors.rs  ipc.rs  lib.rs  revocation.rs  std_dirs.rs  test_utils.rs
safe_authenticator/src/ffi/: apps.rs  ipc.rs
safe_authenticator/src/tests/: mod.rs  revocation.rs  share_mdata.rs  utils.rs
safe_core/: Cargo.toml
safe_core/src/: immutable_data.rs  lib.rs  self_encryption_storage.rs
safe_core/src/client/: account.rs  core_client.rs  mdata_info.rs  mod.rs  recovery.rs
safe_core/src/client/mock/: routing.rs  tests.rs  vault.rs
safe_core/src/ffi/: arrays.rs
safe_core/src/ipc/: mod.rs  resp.rs
safe_core/src/ipc/req/: auth.rs  mod.rs
safe_core/src/nfs/: data_map.rs  dir.rs  file_helper.rs  mod.rs  tests.rs  writer.rs
tests/: Cargo.toml
