[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE Authenticator"
documentation = "https://docs.rs/safe_authenticator"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_authenticator"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.8.0"
build = "build.rs"

[dependencies]
config_file_handler = "~0.11.0"
ffi_utils = "~0.8.0"
futures = "~0.1.17"
log = "~0.4.1"
lru-cache = "~0.1.1"
maidsafe_utilities = "~0.16.0"
rand = "~0.3.18"
routing = { path = "../../routing", version = "0.37.0" } # FIXME
safe_core = { path = "../safe_core", version = "~0.31.0" }
safe_crypto = "~0.5.0"
serde = "~1.0.27"
serde_derive = "~1.0.27"
tokio-core = "~0.1.12"
unwrap = "~1.2.0"
jni = { version = "~0.10.1", optional = true }

[dev-dependencies.safe_core]
path = "../safe_core"
version = "~0.31.0"
features = ["testing"]

[build-dependencies]
ffi_utils = "~0.8.0"
jni = "~0.10.1"
routing = { path = "../../routing", version = "0.37.0" } # FIXME
safe_bindgen = "~0.8.0"
safe_crypto = "~0.5.0"
unwrap = "~1.2.0"

[features]
use-mock-routing = ["testing", "safe_core/use-mock-routing"]
testing = ["safe_core/testing"]
bindings = []

[lib]
crate_type = ["staticlib", "rlib", "cdylib"]
